--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "example-app",
   "version": "1.0.0",
   "scripts": {
-    "build": "mkdir -p dist",
-    "test": "echo 'Running tests'", // Or your actual test command
+    "build": "mkdir -p dist", // Or your actual build command
+    "test": "echo 'Running tests'", // Or your actual test command (e.g., "jest")
     "start": "node index.js"
   },
   "dependencies": {
-    "express": "^4.18.2"
+    "express": "^4.18.2" // Example dependency
+  },
+  "devDependencies": {
+    "jest": "^29.7.0" // Example dev dependency for testing
   }
 }
